// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FacebookIntegrationsForm /> renders create form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Enter a name..."
    required={true}
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    inputType="text"
    label="Description"
    name="description"
    placeholder="Enter a description..."
  />
  <InputField
    componentType="input"
    data-automation="clientDisconnectMinutesInput"
    dataType="number"
    disabled={false}
    inputType="text"
    label="Disconnect Time"
    labelHelpText="(minutes)"
    name="clientDisconnectMinutes"
  />
  <DetailsPanelMessage
    text="If Disconnect Time is left blank, the client disconnection checker will not be applied."
    type="info"
  />
  <DetailHeader
    text="Properties"
  />
  <React.Fragment>
    <Detail
      label="Digital Channels App"
    />
    <Detail
      label="Digital Channels App Id"
    />
  </React.Fragment>
  <Detail
    label="Facebook App Id *"
  />
  <InputField
    componentType="input"
    data-automation="appSecretInput"
    disabled={false}
    inputType="text"
    label="Facebook App Secret"
    name="facebookAppSecret"
    placeholder="Enter the facebook app secret..."
  />
  <Detail
    label="Facebook Page Id *"
  />
  <InputField
    componentType="input"
    data-automation="userAccessTokenInput"
    disabled={false}
    inputType="text"
    label="Facebook User Access Token"
    name="facebookUserAccessToken"
    placeholder="Enter the access token of your facebook user..."
  />
  <Styled(Button)
    disabled={false}
    onClick={[Function]}
  >
    Generate access token with Facebook Login
  </Styled(Button)>
  <DetailsPanelMessage
    text="You can manually generate a User Access Token or use the Facebook Login button above to auto generate one."
    type="info"
  />
  <DetailsPanelMessage
    text="Facebook App Secret and Facebook User Access token should not have to be updated again. Only include these fields in the update form when necessary."
    type="warning"
  />
</form>
`;

exports[`<FacebookIntegrationsForm /> renders form when initialValues is null 1`] = `
<form>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={true}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Enter a name..."
    required={true}
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={true}
    inputType="text"
    label="Description"
    name="description"
    placeholder="Enter a description..."
  />
  <InputField
    componentType="input"
    data-automation="clientDisconnectMinutesInput"
    dataType="number"
    disabled={true}
    inputType="text"
    label="Disconnect Time"
    labelHelpText="(minutes)"
    name="clientDisconnectMinutes"
  />
  <DetailsPanelMessage
    text="If Disconnect Time is left blank, the client disconnection checker will not be applied."
    type="info"
  />
  <DetailHeader
    text="Properties"
  />
  <SelectField
    data-automation="appIdList"
    disabled={true}
    label="Digital Channels App *"
    name="appId"
    required={false}
  />
  <InputField
    componentType="input"
    data-automation="appIdInput"
    disabled={true}
    inputType="text"
    label="Facebook App Id *"
    name="facebookAppId"
    placeholder="Enter the facebook app id..."
  />
  <InputField
    componentType="input"
    data-automation="appSecretInput"
    disabled={true}
    inputType="text"
    label="Facebook App Secret *"
    name="facebookAppSecret"
    placeholder="Enter the facebook app secret..."
  />
  <InputField
    componentType="input"
    data-automation="pageIdInput"
    disabled={true}
    inputType="text"
    label="Facebook Page Id *"
    name="facebookPageId"
    placeholder="Enter the id of your facebook page..."
  />
  <InputField
    componentType="input"
    data-automation="userAccessTokenInput"
    disabled={true}
    inputType="text"
    label="Facebook User Access Token *"
    name="facebookUserAccessToken"
    placeholder="Enter the access token of your facebook user..."
  />
  <Styled(Button)
    disabled={true}
    onClick={[Function]}
  >
    Generate access token with Facebook Login
  </Styled(Button)>
  <DetailsPanelMessage
    text="You can manually generate a User Access Token or use the Facebook Login button above to auto generate one."
    type="info"
  />
</form>
`;

exports[`<FacebookIntegrationsForm /> renders update form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Enter a name..."
    required={true}
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    inputType="text"
    label="Description"
    name="description"
    placeholder="Enter a description..."
  />
  <InputField
    componentType="input"
    data-automation="clientDisconnectMinutesInput"
    dataType="number"
    disabled={false}
    inputType="text"
    label="Disconnect Time"
    labelHelpText="(minutes)"
    name="clientDisconnectMinutes"
  />
  <DetailsPanelMessage
    text="If Disconnect Time is left blank, the client disconnection checker will not be applied."
    type="info"
  />
  <DetailHeader
    text="Properties"
  />
  <React.Fragment>
    <Detail
      label="Digital Channels App"
    />
    <Detail
      label="Digital Channels App Id"
    />
  </React.Fragment>
  <Detail
    label="Facebook App Id *"
  />
  <InputField
    componentType="input"
    data-automation="appSecretInput"
    disabled={false}
    inputType="text"
    label="Facebook App Secret"
    name="facebookAppSecret"
    placeholder="Enter the facebook app secret..."
  />
  <Detail
    label="Facebook Page Id *"
  />
  <InputField
    componentType="input"
    data-automation="userAccessTokenInput"
    disabled={false}
    inputType="text"
    label="Facebook User Access Token"
    name="facebookUserAccessToken"
    placeholder="Enter the access token of your facebook user..."
  />
  <Styled(Button)
    disabled={false}
    onClick={[Function]}
  >
    Generate access token with Facebook Login
  </Styled(Button)>
  <DetailsPanelMessage
    text="You can manually generate a User Access Token or use the Facebook Login button above to auto generate one."
    type="info"
  />
  <DetailsPanelMessage
    text="Facebook App Secret and Facebook User Access token should not have to be updated again. Only include these fields in the update form when necessary."
    type="warning"
  />
</form>
`;
